# generate-tts

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/gen_tts/: cli.py  config.py  core.py  utils.py
src/gen_tts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_multi_speaker.py
